<resources>
    <string name="app_name">Front-CycleScape</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="mapa_bicicletas">Mapa de Bicicletas</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="lastname">Lastname</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate (AAAA-MM-DD)</string>
</resources>